исправил некоторые замечания.

--- a/index.html
+++ b/index.html
@@ -11,27 +11,28 @@
 </head>
 <body style="font-family: Montserrat" sans-serif;>
     <main>
-        <div class="card">
-            <div class="card__image">
-                <img class="card__img" src="img/moist-muss.jpg" alt="Увлажняющий мусс для нормальной кожи">
-            </div>
-            <span class="card__skin">для нормальной кожи</span>
-            <h2 class="card__name">Увлажняющий мусс</h2>
-            <p class="card__desc">
-                Глубоко увлажняют кожу лица, оставляя её мягкой и гладкой.
-            </p>
-            <section class="compound__wrapper">
-                <span class="compound__name">Состав:</span>
-                <ul class="compound__list">
-                    <li>активные натуральные комплексы</li>
-                    <li>витамины С, А, РР, В и Е</li>
-                    <li>солнцезащитные компоненты</li>
-                </ul>
-            </section>
-            <div class="products__price">
-                <b>Цена:</b> <span>2 750 &#8381;</span>
-            </div>
+    <div>
+        <div>
+            <img src="img/moist-muss.jpg" alt="Увлажняющий мусс для нормальной кожи">
         </div>
+        <span>для нормальной кожи</span>
+        <h2>Увлажняющий мусс</h2>
+        <p>
+            Глубоко увлажняют кожу лица, оставляя её мягкой и гладкой.
+        </p>
+        <div>
+            <span>Состав:</span>
+            <ul>
+                <li>активные натуральные комплексы</li>
+                <li>витамины С, А, РР, В и Е</li>
+                <li>солнцезащитные компоненты</li>
+            </ul>
+        </div>
+        <div>
+            <b>Цена:</b>
+            <span>2 750 &#8381;</span>
+        </div>
+    </div>
     </main>
 </body>
 </html>
