implemented button actions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
     <main class="main">
         <section class="product-catalog">
             <div class="container product-catalog__container">
-                <h1 class="title product-catalog__title">Выбери свой продукт</h1>
+                <h1 class="title product-catalog__title" id="main-title">Выбери свой продукт</h1>
+                <div class="product-cards-btn">
+                    <button class="product-cards-btn-style" id="change-all-card">Сменить цвет всех карточек</button>
+                    <button class="product-cards-btn-style" id="change-color-first-card">Сменить цвет первой карточки</button>
+                    <button class="product-cards-btn-style" id="open-google">Открыть домашнюю страницу Google.com</button>
+                    <button class="product-cards-btn-style" id="output-console-log">Вывести сообщение в console log</button>
+                    <button class="product-cards-btn-style" id="switch-color-btn">Изменить цвет кнопки</button>
+                </div>
                 <ul class="products-list">
                     <li class="product-card">
                         <img class="product-card__img" src="img/moist-mousse.png" alt="Увлажняющий мусс">
@@ -111,5 +118,6 @@
             </div>
         </section>
     </main>
+    <script src="main.js"></script>
 </body>
 </html>
