--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
             </div>
         </section>
     </main>
+    <script src="homework-6.js"></script>
     <script src="homework-5.js"></script>
     <script src="main.js"></script>
 </body>
