fix js files and icons

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                     <p class="left-content-text">У нас самые лучшие продукты для кожи!</p>
                     <div class="social-icons">
                         <a href="#!">
-                            <img src="img/telegram-icon.png" alt="Наш Телеграм" class="telegram-icon">
+                            <img src="img/telegram-icon.svg" alt="Наш Телеграм" class="telegram-icon">
                         </a>
                         <a href="#!">
-                            <img src="img/vk-icon.png" alt="Наш ВКонтакте" class="vk-icon">
+                            <img src="img/vk-icon.svg" alt="Наш ВКонтакте" class="vk-icon">
                         </a>
                     </div>
                 </div>
