Implement classes for modal and form

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <input id="user-repeated-password" placeholder="Пароль" type="password" name="userRepeatedPassword" required>
                         <button type="submit" class="registration-btn">Зарегистрироваться</button>
                     </form>
-                    <div class="modal close-modal">
+                    <div id="modal" class="modal close-modal">
                         <div class="modal-showed">
                             <form id="authorization-form">
                                 <h3 class="authorization-form__title">Авторизация</h3>
@@ -106,12 +106,6 @@
                 <a class="link" href="#!">www.product-cards.com© all right reserve</a>
             </div>
         </footer>
-        <script src="homework-5.js"></script>
-        <script src="homework-6.js"></script>
-        <script type="module" src="product-cards.js"></script>
-        <script type="module" src="homework-7.js"></script>
-        <script type="module" src="homework-8.js"></script>
-        <script src="homework-9.js"></script>
-        <script src="main.js"></script>
+        <script type="module" src="main.js"></script>
 </body>
 </html>
