format code js and css

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                         <input id="user-repeated-password" placeholder="Пароль" type="password" name="userRepeatedPassword" required>
                         <button type="submit" class="registration-btn">Зарегистрироваться</button>
                     </form>
-                    <div id="modal" class="modal close-modal">
-                        <div class="modal-showed">
+                    <div id="modal" class="modal">
+                        <div class="modal-window">
                             <form id="authorization-form">
                                 <h3 class="authorization-form__title">Авторизация</h3>
                                 <label for="user-login-2">Логин:</label>
