fix overlay logic

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 <button id="close-btn" class="close-btn">X</button>
                             </form>
                         </div>
-                        <div class="overlay"></div>
+                        <div id="overlay" class="overlay" ></div>
                     </div>
             </div>
         </section>
