--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <label for="user-password-2">Пароль:</label>
                                 <input placeholder="Введите пароль" type="password" class="user-password-2" name="user-password-2" required>
                                 <button type="submit" class="login-btn" id="login-btn">Войти</button>
-                                <button id="close-btn" class="close-btn">X</button>
+                                <button type="button" id="close-btn" class="close-btn">X</button>
                             </form>
                         </div>
                         <div id="overlay" class="overlay" ></div>
