format code, and add func deleteUser

--- a/homeworks/homework-13/async/async.html
+++ b/homeworks/homework-13/async/async.html
@@ -19,7 +19,7 @@
             </div>
             <ul class="user-cards-list list-none"></ul>
             <template id="template-user-card">
-                <li class="user-card-item">
+                <li data-id="" class="user-card-item">
                     <p class="user-id user-info"></p>
                     <p class="user-firstname user-info"></p>
                     <p class="user-lastname user-info"></p>
